--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ code {
 			</div>
 
 			<div class="message">
-				<h1>It's running!</h1>
+				<h1>It's running the new version!</h1>
 				<div class="congrats">Congratulations, you successfully deployed a container image to Cloud Run</div>
 			</div>
 		</div>
